main/default/objects/pharos__Event__c/fields/pharos__Actions__c.field-meta.xml
<CustomField>
    <fullName>pharos__Actions__c</fullName>
    <label>Actions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>