main/default/objects/pharos__Event__c/fields/pharos__Criteria__c.field-meta.xml
<CustomField>
    <fullName>pharos__Criteria__c</fullName>
    <label>Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>