main/default/objects/pharos__Event__c/fields/pharos__Event_Details__c.field-meta.xml
<CustomField>
    <fullName>pharos__Event_Details__c</fullName>
    <label>Event Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>