main/default/objects/pharos__Event__c/fields/pharos__Grouped_Field_Values__c.field-meta.xml
<CustomField>
    <fullName>pharos__Grouped_Field_Values__c</fullName>
    <label>Grouped Field Values</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>