main/default/objects/pharos__Event__c/fields/pharos__RecordCount__c.field-meta.xml
<CustomField>
    <fullName>pharos__RecordCount__c</fullName>
    <label>Number of Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>