main/default/objects/pharos__Event__c/fields/pharos__Records__c.field-meta.xml
<CustomField>
    <fullName>pharos__Records__c</fullName>
    <label>Records</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>