main/default/objects/pharos__Event__c/fields/pharos__Rule__c.field-meta.xml
<CustomField>
    <fullName>pharos__Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rule</label>
    <referenceTo>pharos__Rule__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Rules</relationshipName>
    <type>Lookup</type>
</CustomField>