main/default/objects/pharos__Event__c/fields/pharos__Rule_Description__c.field-meta.xml
<CustomField>
    <fullName>pharos__Rule_Description__c</fullName>
    <formula>pharos__Rule__r.pharos__Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rule Description</label>
    <type>Text</type>
</CustomField>