main/default/objects/pharos__Event__c/fields/pharos__Rule_Name__c.field-meta.xml
<CustomField>
    <fullName>pharos__Rule_Name__c</fullName>
    <formula>pharos__Rule__r.pharos__Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rule Name</label>
    <type>Text</type>
</CustomField>