main/default/objects/pharos__Event__c/listViews/pharos__All.listView-meta.xml
<ListView>
    <fullName>pharos__All</fullName>
    <columns>NAME</columns>
    <columns>pharos__Rule__c</columns>
    <columns>pharos__Criteria__c</columns>
    <columns>pharos__Actions__c</columns>
    <columns>pharos__RecordCount__c</columns>
    <columns>pharos__Event_Details__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>